modified second commit

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav justify-content-end">
-                    <button class="nav-link active" aria-current="page">One Player</button>
-                    <button class="nav-link active" aria-current="page">Two Player</button>
+                    <button class="nav-link active" aria-current="page" id="onePlayer">One Player</button>
+                    <button class="nav-link active" aria-current="page" id="twoPlayer">Two Player</button>
                     <button class="nav-link active" aria-current="page" id="reset">Reset</button>
                 </div>
             </div>
